rename aws region variable

--- a/src/example.env
+++ b/src/example.env
@@ -7,5 +7,5 @@ MONGODB_POSTS_COLLECTION=""
 
 AWS_ACCESS_KEY=""
 AWS_SECRET_ACCESS_KEY=""
-AWS_S3_REGION=""
+AWS_DEFAULT_REGION=""
 AWS_IMAGE_BUCKET=""
