--- a/.github/workflows/DeployToAWSLamda.yml
+++ b/.github/workflows/DeployToAWSLamda.yml
@@ -32,7 +32,7 @@ jobs:
           cd ./venv/lib/python3.9/site-packages
           zip -r9 ../../../../api.zip .
       - name: Add Src to Zip file
-        run: cd ./src && zip -g ../api.zip -r .
+        run: cd ./app && zip -g ../api.zip -r .
       - name: Upload Zip File Artifact
         uses: actions/upload-artifact@v2
         with:
