--- a/app/example.env
+++ b/app/example.env
@@ -5,7 +5,7 @@ MONGODB_DATABASE=""
 MONGODB_GALLERIES_COLLECTION=""
 MONGODB_POSTS_COLLECTION=""
 
-AWS_ACCESS_KEY=""
+AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_DEFAULT_REGION=""
 AWS_IMAGE_BUCKET=""
