--- a/app/example.env
+++ b/app/example.env
@@ -9,3 +9,7 @@ AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_DEFAULT_REGION=""
 AWS_IMAGE_BUCKET=""
+
+GITHUB_API_URL=""
+GITHUB_ACCESS_TOKEN=""
+GITHUB_EVENT_TYPE=""
