--- a/admin_dashboard/package.json
+++ b/admin_dashboard/package.json
@@ -15,14 +15,15 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
-        "styled-components": "^5.3.6",
-        "typescript": "^4.9.5"
+        "styled-components": "^5.3.6"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix ."
     },
     "eslintConfig": {
         "extends": [
@@ -43,6 +44,22 @@
         ]
     },
     "devDependencies": {
-        "tailwindcss": "^3.2.6"
+        "@typescript-eslint/eslint-plugin": "^5.51.0",
+        "eslint": "^8.34.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-standard-with-typescript": "^34.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-tailwindcss": "^3.8.3",
+        "prettier": "^2.8.4",
+        "tailwindcss": "^3.2.6",
+        "typescript": "^4.9.5"
     }
 }
